About page, begin working on lcoation info

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "innovateit2019",
+  "name": "energeo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "author": "The coolest team",
+  "author": "Ryan O'Day, Kelley Chiu, Prangon Ghose, Zhen Yi Pan",
   "license": "ISC",
   "devDependencies": {
     "@types/es6-promise": "^3.3.0",
